--- a/HTML/Asgmt01_main.html
+++ b/HTML/Asgmt01_main.html
@@ -94,8 +94,8 @@
         /* Project Grid Section */
         .project-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Create a responsive grid */
-            gap: 20px; /* Space between cards */
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 20px; 
             padding: 20px;
             justify-items: center;
         }
@@ -113,7 +113,7 @@
         }
 
         .project-card:hover {
-            transform: translateY(-5px); /* Slight elevation effect on hover */
+            transform: translateY(-5px); 
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
         }
 
@@ -143,7 +143,7 @@
             color: #181818
         }
 
-        /* Contact Form Styling */
+    /* Contact Form Styling */
     form {
         display: flex;
         flex-direction: column;
